[gd_scene load_steps=17 format=3 uid="uid://d33e5qm5cm1c8"]

[ext_resource type="Script" path="res://Scripts/Boss.gd" id="1_2uk6k"]
[ext_resource type="PackedScene" uid="uid://dadxqahji7jr1" path="res://Scenes/bullet.tscn" id="2_316rn"]
[ext_resource type="Texture2D" uid="uid://bigvucfq83tig" path="res://Sprites/Victor_phase1_Spritesheet.png" id="3_e817l"]
[ext_resource type="Texture2D" uid="uid://cd3wdxs0ltsib" path="res://Sprites/Victor_phase2_Spritesheet.png" id="4_lobv2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hc0g"]
size = Vector2(11, 16)

[sub_resource type="Animation" id="Animation_24u8u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_g611s"]
resource_name = "boss_phase2_attack"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_73fym"]
resource_name = "boss_phase2_charge"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_aecsf"]
resource_name = "boss_phase2_walk"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wucqq"]
_data = {
"RESET": SubResource("Animation_24u8u"),
"boss_phase2_attack": SubResource("Animation_g611s"),
"boss_phase2_charge": SubResource("Animation_73fym"),
"boss_phase2_walk": SubResource("Animation_aecsf")
}

[sub_resource type="Animation" id="Animation_yama6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tmrm0"]
resource_name = "boss_phase1_attack"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_x5b87"]
resource_name = "boss_phase1_transitiontophase2"
length = 3.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1, 1.3, 1.6, 2, 2.4, 2.8, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_wgi6q"]
resource_name = "boss_phase1_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_je8sw"]
_data = {
"RESET": SubResource("Animation_yama6"),
"boss_phase1_attack": SubResource("Animation_tmrm0"),
"boss_phase1_transitiontophase2": SubResource("Animation_x5b87"),
"boss_phase1_walk": SubResource("Animation_wgi6q")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_onn6u"]
radius = 1543.08

[node name="Boss" type="CharacterBody2D"]
scale = Vector2(5, 5)
collision_layer = 258
collision_mask = 258
motion_mode = 1
script = ExtResource("1_2uk6k")
Bullet = ExtResource("2_316rn")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_6hc0g")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("4_lobv2")
hframes = 2
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D2"]
libraries = {
"": SubResource("AnimationLibrary_wucqq")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.941, 1)
texture = ExtResource("3_e817l")
hframes = 9
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_je8sw")
}

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_onn6u")

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Firepoint" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="Firepoint"]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="NavTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Firepoint/ShootTimer" to="." method="_on_shoot_timer_timeout"]
